# ManagedKernel

./: Makefile  kernel.elf  meson.build
Kernel/Architecture/I686/: meson.build
Kernel/Architecture/I686/Boot/: Boot.s  Entry.cpp
Kernel/Architecture/I686/Native/: Debug.cpp  Debug.hpp  GDT.cpp  GDT.hpp  IO.hpp  Interrupt.cpp  Interrupt.hpp  meson.build
Kernel/Architecture/MIPS64BE/: meson.build
Kernel/Architecture/MIPS64BE/Boot/: Boot.s  Entry.cpp
Kernel/Architecture/MIPS64BE/Native/: meson.build
Kernel/Architecture/MIPS64EL/: meson.build
Kernel/Architecture/MIPS64EL/Boot/: Boot.s  Entry.cpp
Kernel/Architecture/MIPS64EL/Native/: Debug.cpp  Debug.hpp  meson.build
Kernel/Architecture/RISCV64/: meson.build
Kernel/Architecture/RISCV64/Boot/: Boot.s  Entry.cpp  meson.build
Kernel/Architecture/RISCV64/Native/: Debug.cpp  meson.build
Kernel/C/: assert.cpp  assert.hpp  math.cpp  math.hpp  meson.build  stdio.cpp  stdio.hpp  stdlib.cpp  stdlib.hpp  string.cpp  string.hpp
Kernel/Ke/: Entry.cpp  Entry.hpp  HAL.hpp  bcl.h  meson.build
Kernel/October/: Linker.cpp  Linker.h  Loader.cpp  Loader.h  Scanner.cpp  Scanner.h  meson.build
Kernel/Reflector/: Embedded.cpp  Embedded.h  Reflector.cpp  Reflector.h  UUID.cpp  UUID.h  meson.build
Kernel/Runtime/: Engine.cpp  Engine.h  OpCodesNames.h  meson.build
Targets/Cross/: I686  MIPS64BE  MIPS64EL  RISCV64
Targets/Scripts/: I686.ld  MIPS64EL.ld  RISCV64.ld
